--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>FAQ – Home</title>
+  <title>FAQ – SERVIZI BTICINO</title>
 
   <style>
     :root{
@@ -198,7 +198,7 @@
     <div class="hero">
       <h2>Seleziona una FAQ</h2>
       <p>
-        Questa pagina è il punto di ingresso unico per i colleghi: un click e vai alla FAQ corretta.
+        Scegli qui sotto il servizio per cui hai bisogno di chiarimenti: un click e vai alla FAQ corretta.
       </p>
     </div>
 
@@ -211,7 +211,7 @@
         </p>
         <div class="btnrow">
           <!-- LINK 1: Sicuri e Connessi -->
-          <a class="btn" href="https://servicecbticino.github.io/sicuri-e-connessi-faq/" target="_blank" rel="noopener">
+          <a class="btn" href="https://servicebticino.github.io/sicuri-e-connessi-faq/" target="_blank" rel="noopener">
             Apri FAQ Sicuri e Connessi →
           </a>
         </div>
@@ -226,7 +226,7 @@
         <div class="btnrow">
           <!-- LINK 2: Videocitofonia
                Se il tuo URL è diverso, cambia SOLO questa riga. -->
-          <a class="btn" href="https://servicecbticino.github.io/FAQ_Estensioni_Garanzia_Videocitofonia/" target="_blank" rel="noopener">
+          <a class="btn" href="https://servicebticino.github.io/FAQ_Estensioni_Garanzia_Videocitofonia/" target="_blank" rel="noopener">
             Apri FAQ Videocitofonia →
           </a>
         </div>
